fix mybatis version conflict